--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.application.name=backend
 # CONFIGURACIÓN DE LA CONEXIÓN A LA BASE DE DATOS
 # ----------------------------------------------------------------
 # URL de la base de datos (puerto estándar 3306, base de datos 'veterinaria')
-spring.datasource.url=jdbc:mysql://localhost:3306/veterinaria
+spring.datasource.url=${BD_URL}
 
 # Usuario de la base de datos
-spring.datasource.username=root
+spring.datasource.username=${BD_USERNAME}
 
 # Contraseña de la base de datos 
-spring.datasource.password=Jodoncio#05
+spring.datasource.password=${BD_PASSWORD}
 
 # ----------------------------------------------------------------
 # CONFIGURACIÓN DE JPA (Hibernate)
