feat: Finaliza implementacion de Spring Profiles y puerto 8081

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,28 +1,13 @@
 spring.application.name=backend
 
 # ----------------------------------------------------------------
-# CONFIGURACIÓN DE LA CONEXIÓN A LA BASE DE DATOS
+# CONFIGURACIÓN DEL PUERTO (Corregido a 8081 para Render/Docker)
 # ----------------------------------------------------------------
-# URL de la base de datos (puerto estándar 3306, base de datos 'veterinaria')
-spring.datasource.url=${BD_URL}
-
-# Usuario de la base de datos
-spring.datasource.username=${BD_USERNAME}
-
-# Contraseña de la base de datos 
-spring.datasource.password=${BD_PASSWORD}
+server.port=8081
 
 # ----------------------------------------------------------------
-# CONFIGURACIÓN DE JPA (Hibernate)
+# CONFIGURACIÓN DEL PERFIL ACTIVO
 # ----------------------------------------------------------------
-# 'update' mantiene las tablas creadas (clientes) sin borrarlas al iniciar
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-# CONFIGURACIÓN DE JPA (Hibernate) 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.open-in-view=false
-
-# ----------------------------------------------------------------
-# CONFIGURACIÓN DEL SERVIDOR WEB Y CORS
-# ----------------------------------------------------------------
-server.port=8080
+# Por defecto, se activa el perfil 'local' para que funcione en tu PC.
+# Render lo anulará con 'cloud' usando la variable de entorno.
+spring.profiles.active=local
