fix: Corrige puerto local de PostgreSQL (5432)

--- a/backend/src/main/resources/application-cloud.properties
+++ b/backend/src/main/resources/application-cloud.properties
@@ -2,12 +2,12 @@
 # ----------------------------------------------------------------
 # Spring buscará estas variables en el entorno de Render:
 # ----------------------------------------------------------------
-spring.datasource.url=${DB_URL} 
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${BD_URL} 
+spring.datasource.username=${BD_USERNAME}
+spring.datasource.password=${BD_PASSWORD}
 
 # Configuraciones de JPA, Dialecto, etc.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
