--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -2,14 +2,14 @@
 # ----------------------------------------------------------------
 # Aquí usamos la configuración local de MySQL
 # ----------------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/veterinaria
+spring.datasource.url=jdbc:postgresql://localhost:543/veterinaria
 spring.datasource.username=root
 spring.datasource.password=Jodoncio#05
 
 # Configuraciones de JPA, Dialecto, etc.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 
 # El puerto es irrelevante aquí, Spring usará el del archivo principal.
